resolve-the-scrollbar-issue

--- a/src/components/ResponsibleGamingComponents/SideBar.scss
+++ b/src/components/ResponsibleGamingComponents/SideBar.scss
@@ -15,31 +15,15 @@
         border-radius: 0.5714rem;
         list-style-type: none;
         padding: 1rem 0;
-        margin: 0;
+        margin: 0 0 auto 0;
         position: sticky;
-        bottom: 0;
-        overflow: auto;
-        &::-webkit-scrollbar {
-            width: 0.572rem;
-        }
-        &::-webkit-scrollbar-track {
-            background-color: rgba(242, 242, 242, 0.06);
-            border-radius: 1em;
-        }
-      
-        &::-webkit-scrollbar-thumb {
-            background-color: rgba(242, 242, 242, 0.06);
-            border-radius: 1em;
-            &:hover{
-                background-color: rgba(242, 242, 242, 0.09);
-            }
-        }
+        top: 7.9rem;
         a{
+            cursor: pointer;
             display: block;
             font-size: 0.8571rem;
             padding: 0.934em 1.833em;
             border-left: 0.3333em solid transparent;
-            text-transform: capitalize;
         }
     }
 }
