--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -17,6 +17,7 @@ html,
 body {
   font-size: 14px;
   font-family: "Poppins", sans-serif;
+  scroll-behavior: smooth;
 }
 body {
   margin: 0;
